--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
         <a style="color: white; background-color: rebeccapurple; padding: 5px;"  href="#"><i class="bi-telephone"></i>Contact Me</a>
     </main>
 
-    <footer>
-        <h2>Reach out to my mail</h2>
-        <form action="#">
+    <footer style="color: white; background-color: rebeccapurple; padding: 5px;">
             <div>
-                <label for="Name">Name</label>
+                <label for="name">Name</label>
                 <input type="text" id="name" minlength="3" required>
             </div>
 
