--- a/index.html
+++ b/index.html
@@ -39,13 +39,7 @@
 
             </div>
 
-
-
-
-
-
-
-    </footer>
+    </footer style="color: white; background-color: rebeccapurple; padding: 5px;">
 
 
 
