--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
                 <textarea id="message" cols="30" rows="10"></textarea>
             </div>
 
-            <div>
-
-            </div>
-
-    </footer style="color: white; background-color: rebeccapurple; padding: 5px;">
+    </footer>
 
 
 
