--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <textarea id="message" cols="30" rows="10"></textarea>
             </div>
 
+            <label for="submit">Submit</label>
+            <input type="Submit" value="Submit">
+
     </footer>
 
 
