--- a/index.html
+++ b/index.html
@@ -1,44 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <style>
+        header,
+        footer {
+
+            background-color: #5b2196;
+            color: #f1eeee;
+            padding: 30px 40px;
+
+        }
+    </style>
 </head>
-<body>
-    
-    <header style="background-color: rebeccapurple;color: white;padding: 10px;">
+
+<body style="margin:0">
+
+    <header>
         <h1>MY RESUME</h1>
     </header>
 
-    <main style="padding: 10px;">
-        <h2>Gabriel Victor</h2>
-        <p>learning Software & Web Developement</p>
-        <a style="color: white; background-color: rebeccapurple; padding: 5px;" href="#"><i class="bi-box-arrow-down"></i>Download My Resume</a>
-        <a style="color: white; background-color: rebeccapurple; padding: 5px;"  href="#"><i class="bi-telephone"></i>Contact Me</a>
+    <main style="padding: 30px 30PX;">
+
+        <h2 style="padding: 10px;">Gabriel Victor</h2>
+        <p style="padding: 10px;">learning Software & Web Developement</p>
+        <a style="color: #ffffff; background-color: #663399; padding: 10px;" href="#"><i
+                class="bi-box-arrow-down"></i>Download My Resume</a>
+        <a style="color: #ffffff; background-color: #663399; padding: 10px;" href="#"><i
+                class="bi-telephone"></i>Contact Me</a>
+
+
+
     </main>
 
-    <footer style="color: white; background-color: rebeccapurple; padding: 5px;">
-            <div>
-                <label for="name">Name</label>
-                <input type="text" id="name" minlength="3" required>
-            </div>
+    <footer>
+        <div style="padding: 30px;">
+            <label for="name">Name</label>
+            <input type="text" id="name" style="width: 100%; padding: 12px 14px;" minlength="3" required>
+        </div>
 
-            <div>
-             <label for="email">email</label>
-             <input type="email" id="email" required>
-            </div>
+        <div style="padding: 30px;">
+            <label for="email">Email</label>
+            <input type="email" id="email" style="width: 100%; padding: 12px 14px;" required>
+        </div>
 
-            <div>
-                <label for="message">Message</label>
-                <textarea id="message" cols="30" rows="10"></textarea>
-            </div>
+        <div style="padding: 30px;">
+            <label for="message">Message</label>
+            <textarea id="message" style="width: 100%; padding: 12px 14px;" cols="30" rows="10"></textarea>
+        </div>
 
-            <br>
+        <div style="padding: 30px;">
             <label for="submit">Submit</label>
             <input type="Submit" value="Submit">
-
+        </div>
     </footer>
 
 
@@ -46,4 +64,5 @@
 
 
 </body>
+
 </html>
