--- a/index.html
+++ b/index.html
@@ -1,68 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <style>
-        header,
-        footer {
-
-            background-color: #5b2196;
-            color: #f1eeee;
-            padding: 30px 40px;
-
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-
-<body style="margin:0">
-
+<body>
     <header>
-        <h1>MY RESUME</h1>
+        <h1 class="logo">Gabriel <span>Lee</span></h1>
+        <nav class="nav">
+            <a href="#">Home</a>
+            <a href="#">Project</a>
+            <a href="#">Contact</a>
+        </nav>
+        <a href="#" class="header-action">Hire Me</a>
     </header>
-
-    <main style="padding: 30px 30PX;">
-
-        <h2 style="padding: 10px;">Gabriel Victor</h2>
-        <p style="padding: 10px;">learning Software & Web Developement</p>
-        <a style="color: #ffffff; background-color: #663399; padding: 10px;" href="#"><i
-                class="bi-box-arrow-down"></i>Download My Resume</a>
-        <a style="color: #ffffff; background-color: #663399; padding: 10px;" href="#"><i
-                class="bi-telephone"></i>Contact Me</a>
-
-
-
+    <main>
+        <section class="hero">
+            <div>
+                <p>Hello there, welcome to my website</p>
+                <h2>I'm Gabriel Victor <strong>A Professional Frontend</strong>Developer</h2>
+                <div class="action-button-group">
+                    <a class="action-button-primary" href="#">Download My Resume</a>
+                    <a class="action-button-secondary" href="#">Contact Me</a>
+                </div>
+            </div>
+            <div>
+                <figure class="hero-image-container">
+                    <img src="photo_2023-07-12_08-08-30.jpg" alt="Img">
+                </figure>
+            </div>
+        </section>
     </main>
-
-    <footer>
-        <div style="padding: 30px;">
-            <label for="name">Name</label>
-            <input type="text" id="name" style="width: 100%; padding: 12px 14px;" minlength="3" required>
-        </div>
-
-        <div style="padding: 30px;">
-            <label for="email">Email</label>
-            <input type="email" id="email" style="width: 100%; padding: 12px 14px;" required>
-        </div>
-
-        <div style="padding: 30px;">
-            <label for="message">Message</label>
-            <textarea id="message" style="width: 100%; padding: 12px 14px;" cols="30" rows="10"></textarea>
-        </div>
-
-        <div style="padding: 30px;">
-            <label for="submit">Submit</label>
-            <input type="Submit" value="Submit">
-        </div>
-    </footer>
-
-
-
-
-
 </body>
-
 </html>
